--- a/app/views/directorio.html
+++ b/app/views/directorio.html
@@ -93,7 +93,7 @@
         </thead>
         <tbody>
             <tr>
-                <td>Lic. Melina Zavala Armas</td>
+                <td>C.P. Melina Zavala Armas</td>
                 <td>Enlace Unidad Académica San Luis Río Colorado</td>
                 <td>(653) 534-42-55 - Ext.1228</td>
             </tr>
@@ -108,7 +108,7 @@
                 <td>(662) 215-37-78 / 215-85-93</td>
             </tr>
             <tr>
-                <td>Lic. Karla Beatriz Espinoza Gutierrez</td>
+                <td></td>
                 <td>Enlace Unidad Académica Benito Juárez</td>
                 <td>(643) 435-00-28 - Ext.5302</td>
             </tr>
