--- a/app/views/organigrama.html
+++ b/app/views/organigrama.html
@@ -1,6 +1,6 @@
 <div class="estasAqui">
     <h4 class="estasAquiTexto">
-        <strong class="estasAquiColor">Estas aqui :</strong> Quienes Somos / <span class="ubicacionNavegacion">Organigrama</span></h4>  
+        <strong class="estasAquiColor">Estás aquí :</strong> Quiénes Somos / <span class="ubicacionNavegacion">Organigrama</span></h4>  
 </div>
 
 <div class="myContainer innerBottomOn  subTitleSpace">   
@@ -12,7 +12,7 @@
         -->
         <div class="col-xs-4 colxs4Responsive text-center">
            <figure class="figure animated flipInY" id="carlos">
-                <img class="imgFormat" src="/images/organigrama/default.jpg" alt="carlos">
+                <img class="imgFormat" src="/images/organigrama/ca.png" alt="carlos">
                 <figcaption class="figcaption">Contribuir el desarrollo Institucional de forma equilibrada y de acuerdo a los modelos de planeación universitaria, con base en las líneas de acción educativa para el nivel superior de carácter estatal y nacional, a fin de darle atención prioritaria al cumplimiento de las funciones académicas institucionales.</figcaption>
             </figure>
             <h3><strong>Lic. Carlos Calderón Saldaña</strong></h3>
@@ -25,7 +25,7 @@
         -->
        <div class="col-xs-4 colxs4Responsive text-center">
            <figure class="figure animated flipInY" id="jesus">
-                <img class="imgFormat" src="/images/organigrama/default.jpg" alt="jesus">
+                <img class="imgFormat" src="/images/organigrama/j.png" alt="jesus">
                 <figcaption class="figcaption">Desarrollar los procesos de planeación, programación y evaluación institucional, de acuerdo a los lineamientos establecidos y de acuerdo a los fines académicos y de gestión de la Universidad.
                 </figcaption>
             </figure>
@@ -39,7 +39,7 @@
         -->
        <div class="col-xs-4 colxs4Responsive text-center">
            <figure class="figure animated flipInY" id="celeste">
-                <img class="imgFormat" src="/images/organigrama/defaultw.jpg" alt="celeste">
+                <img class="imgFormat" src="/images/organigrama/c.png" alt="celeste">
                 <figcaption class="figcaption">Contribuir al proceso de desarrollo
                     organizacional y funcional de la Universidad, a través de la aplicación de técnicas y herramientas de mejora administrativas que permitan el logro de los objetivos institucionales.
                 </figcaption>
@@ -93,7 +93,7 @@
                 </figcaption>
             </figure>
             <span class="visibilityHidden" id="unknowText">
-                <h3><strong>Miembro Desconocido</strong></h3>
+                <h3 style="color: white;"><strong>Miembro Desconocido</strong></h3>
                 <p class="orgAreaPersonal"><strong>COORDINACIÓN DE GESTIÓN DE FONDOS</strong></p>
             </span>
        </div>
