--- a/app/views/organismosAcreditadores.html
+++ b/app/views/organismosAcreditadores.html
@@ -16,6 +16,35 @@
 
 <div class="myContainer  innerTopOn">
     <div class="row innerBottomOn">
+        <div class="col-xs-6 orgBoxImg">
+            <img src="/images/acreditacion/7.png" class="imgBox" alt="CACECA">
+        </div>
+        <div class="col-xs-6 orgBoxText">
+            <h1>CACECA</h1>
+            <hr class="hr1">
+            <hr class="hr2">
+            <h4 class="text-justify">
+                El CACECA es la institución certificada como Organización Acreditadora de la Educación Superior con el aval del Consejo para la Acreditación de la Educación Superior (COPAES), instancia capacitada y reconocida por el Gobierno Federal, a través de la Secretaría de Educación Pública (SEP), para conferir reconocimiento formal a favor de organizaciones cuyo fin sea acreditar programas académicos de educación superior, en este caso en las áreas Contables y Administrativas.
+            </h4>
+            <a href="" class="btn btn-block btn-warning">Visitar Sitio Oficial</a>
+        </div>
+
+
+        
+        <div class="col-xs-6 orgBoxText">
+             <h1>CACECA</h1>
+            <hr class="hr1">
+            <hr class="hr2">
+            <h4 class="text-justify">
+                El CACECA es la institución certificada como Organización Acreditadora de la Educación Superior con el aval del Consejo para la Acreditación de la Educación Superior (COPAES), instancia capacitada y reconocida por el Gobierno Federal, a través de la Secretaría de Educación Pública (SEP), para conferir reconocimiento formal a favor de organizaciones cuyo fin sea acreditar programas académicos de educación superior, en este caso en las áreas Contables y Administrativas.
+            </h4>
+            <a href="" class="btn btn-block btn-warning">Visitar Sitio Oficial</a>
+        </div>
+
+        <div class="col-xs-6 orgBoxImg">
+            <img src="/images/acreditacion/7.png" class="imgBox" alt="CACECA">
+        </div>
+
         <!--
 		==============================
 					CACECA
@@ -24,7 +53,7 @@
 		<div class="col-sm-6">
             <div id="tb-testimonial" class="testimonial testimonial-default">
                 <div class="testimonial-section">
-                    Reconocido como el único organismo acreditador para los programas de contaduría, administración y afines en el país, evaluando con estándares e índices que engloban tres aspectos: alumnado, docencia y administración.
+                    El CACECA es la institución certificada como Organización Acreditadora de la Educación Superior con el aval del Consejo para la Acreditación de la Educación Superior (COPAES), instancia capacitada y reconocida por el Gobierno Federal, a través de la Secretaría de Educación Pública (SEP).               
             	</div>
                 <div class="testimonial-desc">
                     <img src="/images/acreditacion/7.png" alt="CACECA" />
@@ -44,7 +73,7 @@
         <div class="col-sm-6">
             <div id="tb-testimonial" class="testimonial testimonial-default">
                 <div class="testimonial-section">
-                    Comités Interinstitucionales para la Evaluación de la Educación Superior, son un organismo dedicado al aseguramiento de la calidad de la educación superior. Está integrado por nueve comités.
+                    Los Comités Interinstitucionales para la Evaluación de la Educación Superior (CIEES) son nueve cuerpos colegiados, integrados por distinguidos académicos de instituciones de educación superior representativos de las diversas regiones del país, que tienen a su cargo la evaluación interinstitucional de programas, funciones, servicios y proyectos.
             	</div>
                 <div class="testimonial-desc">
                     <img src="/images/acreditacion/2.png" alt="CIEES" />
@@ -64,8 +93,8 @@
         <div class="col-sm-6">
             <div id="tb-testimonial" class="testimonial testimonial-default">
                 <div class="testimonial-section">
-                    El COAPEHUM es un organismo consolidado con espiritu de servicio a las Instituciones de Educación Superior nacionales e internacionales, cuya meta sea impulsar de manera efectiva y rigurosa la consolidación de la calidad de la Educación Superior.
-            	</div>
+                        El Consejo para la Acreditación de Programas Educativos en Humanidades, A.C. (COAPEHUM) se encuentra facultado por el Consejo para la Acreditación de la Educación Superior, A.C. para llevar a cabo la revisión y análisis de los programas relativos a las Humanidades en México. 
+                    </div>
                 <div class="testimonial-desc">
                     <img src="/images/acreditacion/3.png" alt="COAPEHUM" />
                     <div class="testimonial-writer">
@@ -78,19 +107,19 @@
 		</div>
         <!--
 		==============================
-					CONAPREN
+					CONCAPREN
 		==============================
 		-->	
         <div class="col-sm-6">
             <div id="tb-testimonial" class="testimonial testimonial-default">
                 <div class="testimonial-section">
-                   El Consejo Nacional para Prevenir La Discriminación, CONAPRED, es un órgano de Estado creado por la Ley Federal para Prevenir y Eliminar la Discriminación, aprobada el 29 de abril de 2003, y publicada en el Diario Oficial de la Federación (DOF).
+                    El Consejo Nacional para la Calidad de los Programas Educativos en Nutriología, A.C. (CONCAPREN) es un organismo acreditador con una firme convicción de la importancia que representa la calidad de los programas educativos en Nutriología en el país; con la finalidad de contar     con preceptos claros, específicos y suficientes para la Acreditación             
             	</div>
                 <div class="testimonial-desc">
                     <img src="/images/acreditacion/4.png" alt="CONAPREN" />
                     <div class="testimonial-writer">
-                    	<div class="testimonial-writer-name">Conapren</div>
-                    	<div class="testimonial-writer-designation">conapren.</div>
+                    	<div class="testimonial-writer-name">Concapren</div>
+                    	<div class="testimonial-writer-designation">concapren.</div>
                     	<a ng-href="http://www.conapred.org.mx" target="_blank" class="testimonial-writer-company btn btn-warning">Visitar Sitio</a>
                     </div>
                 </div>
@@ -104,7 +133,7 @@
         <div class="col-sm-6">
             <div id="tb-testimonial" class="testimonial testimonial-default">
                 <div class="testimonial-section">
-                    Se encarga de llevar a cabo procesos de acreditación de programas educativos de la Licenciatura en el área Biológica y la formación de evaluadores en dicha área así como la emisión de dictámenes finales de acreditación. 
+                    Dada la importancia que para el desarrollo de nuestro País representan las actividades en la formación de recursos humanos capacitados, en el ámbito Biológico, a través de las instituciones de educación tanto de nivel superior como medio superior y técnico profesional, se constituye el Comité de Acreditación de la Licenciatura en Biología.
             	</div>
                 <div class="testimonial-desc">
                     <img src="/images/acreditacion/5.png" alt="CACEB AC" />
@@ -124,7 +153,7 @@
         <div class="col-sm-6">
             <div id="tb-testimonial" class="testimonial testimonial-default">
                 <div class="testimonial-section">
-                   El Consejo de Acreditación de la Enseñanza de la Ingeniería, A.C., (CACEI) es una asociación civil sin fines de lucro. Su objetivo primordial es, mediante la acreditación de los programas educativos en el área de las ingenierías.
+                    El Consejo de Acreditación de la Enseñanza de la Ingeniería, A.C., (CACEI) es una asociación civil sin fines de lucro. Su objetivo primordial es, mediante la acreditación de los programas educativos en el área de las ingenierías, promover que las instituciones de educación superior (IES) ofrezcan educación de calidad a los futuros egresados.
             	</div>
                 <div class="testimonial-desc">
                     <img src="/images/acreditacion/6.png" alt="CACEI" />
@@ -164,7 +193,7 @@
         <div class="col-sm-6">
             <div id="tb-testimonial" class="testimonial testimonial-default">
                 <div class="testimonial-section">
-                    En México la acreditación fue originalmente establecida como una de las funciones de los Comités Interinstitucionales para la Evaluación de la Educación Superior CIEES. Dicha atribución se les asignaba en el documento publicado en 1991.
+                     La Asociación Mexicana de Educación Agrícola Superior A.C. (AMEAS), de común acuerdo con el Comité de Ciencias Agropecuarias de los CIEES impulsaron en forma decidida la creación de un organismo especializado que promueve, evalúa y asegura la calidad y desarrollo de la educación agrícola del país.
             	</div>
                 <div class="testimonial-desc">
                     <img src="/images/acreditacion/8.png" alt="ACOMEA" />
