--- a/app/views/normatividad.html
+++ b/app/views/normatividad.html
@@ -5,23 +5,29 @@
     <div class="innerBottomOn"></div>
     <div class="innerBottomOn"></div>
      <div class="myContainer">
-         <div class="col-xs-4 text-center colxs4Responsive divBorderRight">
+         <div class="col-xs-3 text-center colxs4Responsive divBorderRight">
             <a href="{{vm.pdf[0].src}}" class="animated normImg1" target="_blank">
                 <img  src="{{vm.pdf[0].img}}" class="" style="border:7px solid white; box-shadow: 0px 2px 4px 4px lightgrey;" alt="" width="50%">         
             </a>  
             <h2><strong>{{vm.pdf[0].titulo}}</strong></h2>          
          </div>
-         <div class="col-xs-4 text-center colxs4Responsive divBorderRight">
+         <div class="col-xs-3 text-center colxs4Responsive divBorderRight">
             <a href="{{vm.pdf[1].src}}" class="animated normImg1" target="_blank">
-                <img src="{{vm.pdf[1].img}}" class="img-circle" style="border:7px solid white; box-shadow: 0px 2px 4px 4px lightgrey;" alt="" width="50%">
+                <img src="{{vm.pdf[1].img}}" style="border:7px solid white; box-shadow: 0px 2px 4px 4px lightgrey; height: 170px;" alt="" width="50%">
             </a>
             <h2><strong>{{vm.pdf[1].titulo}}</strong></h2>         
          </div>
-         <div class="col-xs-4 text-center colxs4Responsive">
+         <div class="col-xs-3 text-center colxs4Responsive divBorderRight">
             <a href="{{vm.pdf[2].src}}" class="animated normImg1" target="_blank">
-                <img src="{{vm.pdf[2].img}}" class="img-circle" style="border:7px solid white; box-shadow: 0px 2px 4px 4px lightgrey;" alt="" width="50%">
+                <img src="{{vm.pdf[2].img}}"  style="border:7px solid white; box-shadow: 0px 2px 4px 4px lightgrey;" alt="" width="50%">
             </a>
             <h2><strong>{{vm.pdf[2].titulo}}</strong></h2>
          </div>
+         <div class="col-xs-3 text-center colxs4Responsive">
+            <a href="{{vm.pdf[3].src}}" class="animated normImg1" target="_blank">
+                <img  src="{{vm.pdf[3].img}}" class="" style="border:7px solid white; box-shadow: 0px 2px 4px 4px lightgrey;" alt="" width="50%">         
+            </a>  
+            <h2><strong>{{vm.pdf[3].titulo}}</strong></h2>          
+        </div>  
     </div>
     <div  class="container innerBottomOn"></div>
