cambios org acreditadores

--- a/app/views/organismosAcreditadores.html
+++ b/app/views/organismosAcreditadores.html
@@ -19,6 +19,11 @@
         <div class="col-xs-6 orgBoxImg">
             <img src="/images/acreditacion/7.png" class="imgBox" alt="CACECA">
         </div>
+        <!--
+		==============================
+					CACECA
+		==============================
+		-->	
         <div class="col-xs-6 orgBoxText">
             <h1>CACECA</h1>
             <hr class="hr1">
@@ -38,18 +43,14 @@
             <h4 class="text-justify">
                 El CACECA es la institución certificada como Organización Acreditadora de la Educación Superior con el aval del Consejo para la Acreditación de la Educación Superior (COPAES), instancia capacitada y reconocida por el Gobierno Federal, a través de la Secretaría de Educación Pública (SEP), para conferir reconocimiento formal a favor de organizaciones cuyo fin sea acreditar programas académicos de educación superior, en este caso en las áreas Contables y Administrativas.
             </h4>
-            <a href="" class="btn btn-block btn-warning">Visitar Sitio Oficial</a>
+            <ang-href="http://caceca.org" target="_blank" class="btn btn-block btn-warning">Visitar Sitio Oficial</a>
         </div>
 
         <div class="col-xs-6 orgBoxImg">
             <img src="/images/acreditacion/7.png" class="imgBox" alt="CACECA">
         </div>
 
-        <!--
-		==============================
-					CACECA
-		==============================
-		-->	
+        
 		<div class="col-sm-6">
             <div id="tb-testimonial" class="testimonial testimonial-default">
                 <div class="testimonial-section">
