--- a/app/views/organismosAcreditadores.html
+++ b/app/views/organismosAcreditadores.html
@@ -15,89 +15,67 @@
 
 
 <div class="myContainer  innerTopOn">
-    <div class="row innerBottomOn">
-        <div class="col-xs-6 orgBoxImg">
+    <div class="row innerBottomOn">  
+<!--
+================================================================
+                            CACECA
+================================================================
+-->	
+         <div class="col-xs-6 orgBoxImg">
             <img src="/images/acreditacion/7.png" class="imgBox" alt="CACECA">
         </div>
-        <!--
-		==============================
-					CACECA
-		==============================
-		-->	
-        <div class="col-xs-6 orgBoxText">
+        <div class="col-xs-6 orgBoxText responsive">
             <h1>CACECA</h1>
             <hr class="hr1">
             <hr class="hr2">
             <h4 class="text-justify">
                 El CACECA es la institución certificada como Organización Acreditadora de la Educación Superior con el aval del Consejo para la Acreditación de la Educación Superior (COPAES), instancia capacitada y reconocida por el Gobierno Federal, a través de la Secretaría de Educación Pública (SEP), para conferir reconocimiento formal a favor de organizaciones cuyo fin sea acreditar programas académicos de educación superior, en este caso en las áreas Contables y Administrativas.
             </h4>
-            <a href="" class="btn btn-block btn-warning">Visitar Sitio Oficial</a>
+            <a ng-href="http://caceca.org" target="_blank" class="btn btn-block btn-warning">Visitar Sitio Oficial</a>
         </div>
-
-
-        
+<!--
+================================================================
+                            CIEES
+================================================================
+-->	
         <div class="col-xs-6 orgBoxText">
-             <h1>CACECA</h1>
+             <h1>CIEES</h1>
+            <hr class="hr1">
+            <hr class="hr2">
+            <h4 class="text-justify">
+               Los Comités Interinstitucionales para la Evaluación de la Educación Superior (CIEES) son nueve cuerpos colegiados, integrados por distinguidos académicos de instituciones de educación superior representativos de las diversas regiones del país, que tienen a su cargo la evaluación interinstitucional de programas, funciones, servicios y proyectos ubicados en el quehacer sustantivo de las instituciones.
+            </h4>
+            <a ng-href="http://www.ciees.edu.mx/" target="_blank" class="btn btn-block btn-warning">Visitar Sitio Oficial</a>
+        </div>
+        <div class="col-xs-6 orgBoxImg">
+            <img src="/images/acreditacion/2.png" class="imgBox" alt="CIEES">
+        </div>
+<!--
+================================================================
+                            COAPEHUM
+================================================================
+-->	
+        <div class="col-xs-6 orgBoxImg">
+            <img src="/images/acreditacion/3.png" class="imgBox" alt="CACECA">
+        </div>
+        <div class="col-xs-6 orgBoxText responsive">
+            <h1>CACECA</h1>
             <hr class="hr1">
             <hr class="hr2">
             <h4 class="text-justify">
                 El CACECA es la institución certificada como Organización Acreditadora de la Educación Superior con el aval del Consejo para la Acreditación de la Educación Superior (COPAES), instancia capacitada y reconocida por el Gobierno Federal, a través de la Secretaría de Educación Pública (SEP), para conferir reconocimiento formal a favor de organizaciones cuyo fin sea acreditar programas académicos de educación superior, en este caso en las áreas Contables y Administrativas.
             </h4>
-            <ang-href="http://caceca.org" target="_blank" class="btn btn-block btn-warning">Visitar Sitio Oficial</a>
+            <a ng-href="http://caceca.org" target="_blank" class="btn btn-block btn-warning">Visitar Sitio Oficial</a>
         </div>
 
-        <div class="col-xs-6 orgBoxImg">
-            <img src="/images/acreditacion/7.png" class="imgBox" alt="CACECA">
-        </div>
 
-        
-		<div class="col-sm-6">
-            <div id="tb-testimonial" class="testimonial testimonial-default">
-                <div class="testimonial-section">
-                    El CACECA es la institución certificada como Organización Acreditadora de la Educación Superior con el aval del Consejo para la Acreditación de la Educación Superior (COPAES), instancia capacitada y reconocida por el Gobierno Federal, a través de la Secretaría de Educación Pública (SEP).               
-            	</div>
-                <div class="testimonial-desc">
-                    <img src="/images/acreditacion/7.png" alt="CACECA" />
-                    <div class="testimonial-writer">
-                        <div class="testimonial-writer-name">Consejo de Acreditación</div>
-                        <div class="testimonial-writer-designation">en ciencias administrativas, contables y afines.</div>
-                        <a ng-href="http://caceca.org" target="_blank" class="testimonial-writer-company btn btn-warning">Visitar Sitio</a>
-                    </div>
-                </div>
-            </div>   
-		</div>
-        <!--
-		==============================
-					CIEES
-		==============================
-		-->	
-        <div class="col-sm-6">
-            <div id="tb-testimonial" class="testimonial testimonial-default">
-                <div class="testimonial-section">
-                    Los Comités Interinstitucionales para la Evaluación de la Educación Superior (CIEES) son nueve cuerpos colegiados, integrados por distinguidos académicos de instituciones de educación superior representativos de las diversas regiones del país, que tienen a su cargo la evaluación interinstitucional de programas, funciones, servicios y proyectos.
-            	</div>
-                <div class="testimonial-desc">
-                    <img src="/images/acreditacion/2.png" alt="CIEES" />
-                    <div class="testimonial-writer">
-                    	<div class="testimonial-writer-name">Comités Interinstitucionales</div>
-                    	<div class="testimonial-writer-designation">para la evaluación de la educación superior, A.C.</div>
-                    	<a ng-href="http://www.ciees.edu.mx/" target="_blank" class="testimonial-writer-company btn btn-warning">Visitar Sitio</a>
-                    </div>
-                </div>
-            </div>   
-		</div>
-         <!--
-		==============================
-					COAPEHUM
-		==============================
-		-->	
         <div class="col-sm-6">
             <div id="tb-testimonial" class="testimonial testimonial-default">
                 <div class="testimonial-section">
                         El Consejo para la Acreditación de Programas Educativos en Humanidades, A.C. (COAPEHUM) se encuentra facultado por el Consejo para la Acreditación de la Educación Superior, A.C. para llevar a cabo la revisión y análisis de los programas relativos a las Humanidades en México. 
                     </div>
                 <div class="testimonial-desc">
-                    <img src="/images/acreditacion/3.png" alt="COAPEHUM" />
+                    <img src="" alt="COAPEHUM" />
                     <div class="testimonial-writer">
                     	<div class="testimonial-writer-name">Consejo para la Acreditación</div>
                     	<div class="testimonial-writer-designation">de programas educativos en humanidades.</div>
