Cambio de background

--- a/app/views/inicio.html
+++ b/app/views/inicio.html
@@ -62,7 +62,7 @@
 <!--*************************************************************************************
                                         PLANEACIÓN
 ***************************************************************************************-->
-<div class="jumbotron " style="background-color: #ecf0f1; color: #34302d; height: 510px;">
+<div class="jumbotron " style="background-color: transparent !important; color: #34302d; height: 510px;">
     <div class="animated fadeInLeft">
         <h1 class="display-3">{{vm.title}}</h1>
         <!--<img ng-src="/images/inicio/planning.png" style="padding: 3px; border: 3px solid #f39c12; border-radius: 50%;" class="animated flip"  width="10.3%" alt="planning">-->
